--- a/src/assets/sass/elements/_input.scss
+++ b/src/assets/sass/elements/_input.scss
@@ -7,7 +7,7 @@ input {
   width: 100%;
   border-radius: 3px;
   color: $color-black;
-  font-family: $title-font;
+  @include title-font();
   transition: border-left $animation;
 
   &:focus {
