--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -99,7 +99,7 @@
         </div>
       </div>
       <span class="footer__giraffe">
-        <img [src]="'assets/images/giraffe.png'" [srcset]="'assets/images/giraffe@2x.png 2x'" *ngIf="showMyElement" alt="">
+        <img src="/assets/images/giraffe.png" srcset="/assets/images/giraffe@2x.png 2x" *ngIf="showMyElement" alt="">
       </span>
     </div>
 </footer>
