--- a/src/app/pages/how-to-build-an-effective-brand/how-to-build-an-effective-brand.component.html
+++ b/src/app/pages/how-to-build-an-effective-brand/how-to-build-an-effective-brand.component.html
@@ -44,7 +44,7 @@
             </h2>
     
             <p>
-              {{submitted.msg}}. <strong>Please make sure you check your spam</strong>.
+              {{submitted.msg}}.
             </p>
           </div>
           <ng-template #signup>
