--- a/src/assets/sass/generic/_icons.scss
+++ b/src/assets/sass/generic/_icons.scss
@@ -14,7 +14,7 @@
 }
 
 .fab {
-  font-family: 'fontawesome';
+  font-family: 'FontAwesome';
   speak: none;
   font-style: normal;
   font-weight: normal;
