--- a/src/assets/sass/generic/_fonts.scss
+++ b/src/assets/sass/generic/_fonts.scss
@@ -12,11 +12,11 @@
 
 @font-face {
   font-family: "icomoon";
-  src:  url("https://assets.jupiterandthegiraffe.com/icomoon.eot?54qe1w");
-  src:  url("https://assets.jupiterandthegiraffe.com/icomoon.eot?54qe1w#iefix") format("embedded-opentype"),
-        url("https://assets.jupiterandthegiraffe.com/icomoon.ttf?54qe1w") format("truetype"),
-        url("https://assets.jupiterandthegiraffe.com/icomoon.woff?54qe1w") format("woff"),
-        url("https://assets.jupiterandthegiraffe.com/icomoon.svg?54qe1w#icomoon") format("svg");
+  src:  url("https://assets.jupiterandthegiraffe.com/icomoon.eot");
+  src:  url("https://assets.jupiterandthegiraffe.com/icomoon.eot#iefix") format("embedded-opentype"),
+        url("https://assets.jupiterandthegiraffe.com/icomoon.ttf") format("truetype"),
+        url("https://assets.jupiterandthegiraffe.com/icomoon.woff") format("woff"),
+        url("https://assets.jupiterandthegiraffe.com/icomoon.svg#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
