--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,8 +1,15 @@
 //Bootstrap
-@import "../../../node_modules/bootstrap/scss/mixins";
-@import "../../../node_modules/bootstrap/scss/bootstrap-grid";
+@import "../../../node_modules/bootstrap/scss/functions";
+@import "../../../node_modules/bootstrap/scss/variables";
+@import "../../../node_modules/bootstrap/scss/mixins/breakpoints";
+@import "../../../node_modules/bootstrap/scss/mixins/grid-framework";
+@import "../../../node_modules/bootstrap/scss/mixins/grid";
+@import "../../../node_modules/bootstrap/scss/grid";
 @import "../../../node_modules/bootstrap/scss/images";
+
+// AOS
 @import "../../../node_modules/aos/dist/aos.css";
+
 // Font awesome
 @import "fontawesome/font-awesome";
 
