--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,8 @@
   >
   </app-header-component>
 
+  <app-climate-strike></app-climate-strike>
+
   <app-stars-component></app-stars-component>
 
   <div class="jupiter"></div>
