--- a/src/app/global/climate-strike/climate-strike.component.html
+++ b/src/app/global/climate-strike/climate-strike.component.html
@@ -5,16 +5,19 @@
       <h1>Out of Office</h1>
   
       <p>
-          To keep the planet in business
+        To keep the planet in business
       </p>
   
       <span class="hashtag">#climatestrike</span>
       <span class="hashtag">#createandstrike</span>
-  
+      
+      <div>
+        <a href="https://globalclimatestrike.net/">Take action</a>
+      </div>
+
       <div>
         <img class="climate-strike__logo" src="http://oooclimatestrike.com/images/Create-and-strike-logo.png" alt="">
       </div>
   
-      <a href="http://oooclimatestrike.com/">Take action</a>
     </div>
 </section>
