--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
   >
   </app-header-component>
 
-  <app-climate-strike></app-climate-strike>
+  <!-- <app-climate-strike></app-climate-strike> -->
 
   <app-stars-component></app-stars-component>
 
