--- a/src/app/pages/how-to-build-an-effective-brand/how-to-build-an-effective-brand.component.scss
+++ b/src/app/pages/how-to-build-an-effective-brand/how-to-build-an-effective-brand.component.scss
@@ -4,7 +4,7 @@
 .landing-page {
     &__logo {
         font-size: 2em;
-        padding: 20px 0 100px 0;
+        padding: 20px 0;
     }
 
     &__title {
@@ -17,6 +17,7 @@
             background: $color-malibu;
             display: block;
             margin-top: $space-large;
+            margin: 0 auto;
         }
     }
 
@@ -30,25 +31,67 @@
 
     &__subtitle {
         font-size: 1.5em;
-        text-align: left;
+        max-width: 800px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     &__form {
         background: $color-malibu;
 
         @include sm {
-            padding: $space-large $space-xlrg;
+            padding: $space-small $space-large;
+        }
+
+        h2 {
+            margin: 0;
+        }
+    }
+
+    &__ecover {
+        max-width: 400px;
+    }
+
+    &__video-wrapper {
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 30px;
+        height: 0;
+        overflow: hidden;
+
+        iframe, object, embed {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
         }
     }
 
     &__offer {
-        margin-bottom: $space-large;
+        margin-top: $space-xlrg;
+        margin-bottom: $space-xlrg;
+
+        &--video {
+            align-items: center;
+        }
     }
 
-    &__form-elements {
+    &__form-elements--large {
         @include sm {
             display: flex;
             align-items: center;
+        }
+
+        input {
+            @include sm {
+                margin-bottom: 0;
+                margin-right: $space-large;
+            }
+        }
+
+        button {
+            margin-top: 0;
         }
     }
     
@@ -57,10 +100,6 @@
         margin-top: 0;
 
         height: 50px;
-        @include sm {
-            margin-bottom: 0;
-            margin-right: $space-large;
-        }
     }
     button {
         @include sm-down {
