--- a/src/app/global/footer/footer.component.html
+++ b/src/app/global/footer/footer.component.html
@@ -43,37 +43,44 @@
 
       <ul class="footer__social list-unstyled list-inline">
         <li>
-          <a href="https://www.linkedin.com/company/jupiter-and-the-giraffe/" class="link-plain footer__social-link" title="Jupiter and the Giraffe Linkedin profile">
+          <a href="https://www.linkedin.com/company/jupiter-and-the-giraffe/" class="link-plain footer__social-link">
+            <span class="sr-only">Jupiter and the Giraffe Linkedin profile</span>
             <i class="icon-linkedin" aria-hidden="true"></i>
           </a>
         </li>
         <li>
-          <a href="https://instagram.com/jupiterandthegiraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Instagram profile">
+          <a href="https://instagram.com/jupiterandthegiraffe" class="link-plain footer__social-link">
+            <span class="sr-only">Jupiter and the Giraffe Instagram profile</span>
             <i class="icon-instagram" aria-hidden="true"></i>
           </a>
         </li>
         <li>
-          <a href="https://twitter.com/jupiter_giraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Twitter profile">
+          <a href="https://twitter.com/jupiter_giraffe" class="link-plain footer__social-link">
+            <span class="sr-only">Jupiter and the Giraffe Twitter profile</span>
             <i class="icon-twitter" aria-hidden="true"></i>
           </a>
         </li>
         <li>
-          <a href="https://facebook.com/jupiterandthegiraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Facebook profile">
+          <a href="https://facebook.com/jupiterandthegiraffe" class="link-plain footer__social-link">
+            <span class="sr-only">Jupiter and the Giraffe Facebook profile</span>
             <i class="icon-facebook" aria-hidden="true"></i>
           </a>
         </li>
         <li>
-          <a href="https://pinterest.co.uk/jupiterandthegiraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Pinterest profile">
+          <a href="https://pinterest.co.uk/jupiterandthegiraffe" class="link-plain footer__social-link">
+            <span class="sr-only">Jupiter and the Giraffe Pinterest profile</span>
             <i class="icon-pinterest" aria-hidden="true"></i>
           </a>
         </li>
         <li>
-          <a href="https://www.behance.net/JupiterandtheGiraffe" class="link-plain footer__social-link" title="Jupiter and the Giraffe Behance profile">
+          <a href="https://www.behance.net/JupiterandtheGiraffe" class="link-plain footer__social-link">
+            <span class="sr-only">Jupiter and the Giraffe Behance profile</span>
             <i class="icon-behance" aria-hidden="true"></i>
           </a>
         </li>
         <li>
-          <a href="https://blog.jupiterandthegiraffe.com" class="link-plain footer__social-link" title="Jupiter and the Giraffe Blog">
+          <a href="https://blog.jupiterandthegiraffe.com" class="link-plain footer__social-link">
+            <span class="sr-only">Jupiter and the Giraffe Blog</span>
             <i class="fab fa-wordpress" aria-hidden="true"></i>
           </a>
         </li>
