update h2 on homepage

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,11 +17,13 @@
     </section>
 
     <div class="home__tagline-wrapper">
-      <p class="home__tagline" data-aos="fade-in" data-aos-duration="1000">
+      <h2 class="home__tagline" data-aos="fade-in" data-aos-duration="1000">
         <em class="hidden-md-up home__tagline-border">
           A brand strategy and design studio that believes in the future of humanity. 
           We help the companies behind the technology reach new users, grow and stand out in the market.
         </em>
+      </h2>
+      <p class="home__tagline" data-aos="fade-in" data-aos-duration="1000">
         <em appParallax [ratio]=".15" direction="horizontal" style="display: inline-block;" class="hidden-md home__tagline-border">
           A brand strategy and design studio that believes in the future of humanity. 
           We help the companies behind the technology reach new users, grow and stand out in the market.
