--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -17,18 +17,20 @@
     </section>
 
     <div class="home__tagline-wrapper">
-      <h2 class="home__tagline" data-aos="fade-in" data-aos-duration="1000" class="hidden-md-up">
-        <em class="home__tagline-border">
-          A brand strategy and design studio that believes in the future of humanity. 
-          We help technology companies behind the tech reach new users, grow and stand out in the market.
-        </em>
-      </h2>
-      <p class="home__tagline hidden-md" data-aos="fade-in" data-aos-duration="1000">
-        <em appParallax [ratio]=".15" direction="horizontal" style="display: inline-block;" class="home__tagline-border">
-          A brand strategy and design studio that believes in the future of humanity. 
-          We help technology companies behind the tech reach new users, grow and stand out in the market.
-        </em>
-      </p>
+      <div data-aos="fade-in" data-aos-duration="1000" >
+        <h2 class="home__tagline" class="hidden-md-up">
+          <em class="home__tagline-border">
+            A brand strategy and design studio that believes in the future of humanity. 
+            We help technology companies behind the tech reach new users, grow and stand out in the market.
+          </em>
+        </h2>
+        <p class="home__tagline hidden-md">
+          <em appParallax [ratio]=".15" direction="horizontal" style="display: inline-block;" class="home__tagline-border">
+            A brand strategy and design studio that believes in the future of humanity. 
+            We help technology companies behind the tech reach new users, grow and stand out in the market.
+          </em>
+        </p>
+      </div>
     </div>
   </div>
 
